--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,30 +1,30 @@
-/* Contact.module.css */
-
 .contact {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #f9f9f9;
-  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  background-color: #dadada;
+  border-radius: 12px;
+  height: 80px;
 }
 
-.contactName {
-  font-weight: bold;
-}
-
-.contactNumber {
-  color: #666;
+.contact:hover {
+  background-color: #d3d3d3;
 }
 
 .deleteButton {
-  background-color: #dc3545;
-  color: #fff;
   border: none;
-  border-radius: 4px;
-  padding: 5px 10px;
-  cursor: pointer;
+  background-color: #f70d0d;
+  height: 35px;
+  width: 70px;
+  border-radius: 6px;
 }
 
 .deleteButton:hover {
-  background-color: #c82333;
+  background-color: #e00d0d;
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
 }
