--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -3,7 +3,7 @@
   padding: 0;
   display: flex;
   gap: 0 16px;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -12,5 +12,5 @@
   padding: 10px;
   border-radius: 8px;
   background-color: #f1f1f1;
-  width: 362px;
+  width: 360px;
 }
