--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,6 +1,7 @@
 .searchBoxContainer {
   margin-bottom: 20px;
   max-width: 95%;
+  margin: 24px auto;
 }
 
 .searchBoxInput {
@@ -8,5 +9,5 @@
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 8px;
 }
